# ds-cli

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: config.rs  deepseek.rs  lib.rs  main.rs  models.rs  terminal.rs  tools.rs
