[package]
name = "ds-cli"
version = "0.2.0"
edition = "2024"
authors = ["Patrick Nelwan"]
description = "An interactive DeepSeek coding agent for the terminal"
license = "MIT"
readme = "README.md"
repository = "https://github.com/patricknelwan/ds-cli"
homepage = "https://github.com/patricknelwan/ds-cli"
keywords = ["cli", "deepseek", "agent"]
categories = ["command-line-utilities"]

[[bin]]
name = "ds"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rpassword = "7"
serde_json = "1"
termimad = "0.35.1"

[package.metadata.deb]
section = "utility"
priority = "optional"
assets = [
    ["target/release/ds", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/ds-cli/README.md", "644"],
    ["LICENSE", "usr/share/doc/ds-cli/LICENSE", "644"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/ds", dest = "/usr/bin/ds", mode = "755" },
    { source = "README.md", dest = "/usr/share/doc/ds-cli/README.md", mode = "644" },
    { source = "LICENSE", dest = "/usr/share/doc/ds-cli/LICENSE", mode = "644" },
]
